--- a/template/js/custom-js/html/ProductCard.html
+++ b/template/js/custom-js/html/ProductCard.html
@@ -120,7 +120,7 @@
               :class="isSmall ? 'btn-sm': 'btn-block'"
               :disabled="isWaitingBuy"
               target="_blank"
-              :href="`https://web.whatsapp.com/send?phone=%2B5511943630073&text=Olá,%20estou%20interessado%20no%20produto%20${name}`"
+              :href="`https://${window.innerWidth < 998 ? 'api' : 'web'}.whatsapp.com/send?phone=%2B5511943630073&text=Olá,%20estou%20interessado%20no%20produto%20${name}`"
             >
               <span
                 v-if="isWaitingBuy"
